   now is an error.
 * changed the evaluator of the interpreter so that lists whose car is 'lambda' are
   no longer valid functions. e.g.
     (apply '(lambda (a b) (+ a b)) '(1 2))
   no longer works but gives an error.
   Old behaviour can be restored by the commandline flag '--XX-oldlambda' (interpreter only).
 * changed fixnums from 64 bit to 54 bit (53 bits + 1 sign bit)
 * changed internal-time-units-per-second to integer
 * changed write, writeln, lnwrite to return the first argument (was: t)
 * read throws an error on EOF unless a new optional argument was given

 * added the global variables "most-positive-fixnum" and "most-negative-fixnum"
 * added the special operators catch, throw and unwind-protect
 * added functionp
 * added simple-string-p
 * added vector support:
   * make-array, array-dimension-limit, adjustable-array-p
   * vector, vectorp, vector-push-extend, vector-length, vector-copy, vector-fill, vector->list
   * simple-vector-p, svref, svset, svlength, list->simple-vector and simple-vector->list
 * added bitvector support:
   * bit-vector-p, bv=, simple-bit-vector-p, sbvref (similar to CL sbit), sbvset, sbvlength and sbv=
   * list->simple-bit-vector and simple-bit-vector->list
 * added writable strings
   * sref (identical to CL char), sset
 * added seqref, seqset
   seqref is similar to CL elt, seqset is similar to CL (setf elt)

 * mlib: added sbit
 * mlib: added map, dovector, revappend, nreconc, nreverse, typecase
 * mlib: added generator related functions and macros
   * scan
   * scan-multiple, scan-concat
   * dogenerator
 * mlib: setf now supports strings, e.g.: (setf (char str) #\a)

 * fixed backquote expansion:
   e.g. `(a ,nil) was eval'd to (a); correct expansion is (a nil)
 * fixed compiled jmethod
 * fixed mlib: avoid possible stackoverflows when using larger sequences
   * mapcar, maplist, mapc, mapl, mapcan, mapcon
   * nconc, remove, remove-if, reduce
 * fixed mlib: fixed notevery, notany

